# cortex

./: .gitignore  README.md  pyproject.toml
data/: goog.json
src/: __init__.py  app.py  config.py  data_loader.py  llm.py  main.py  pipeline.py
src/agents/: earnings_analyzer.py  memo_generator.py  sentiment_narrative.py
src/data/: aapl.json  amazon.json  goog.json  index.json  msft.json  nflx.json  nvidia.json  tesla.json
src/templates/: index.html  login.html
src/tools/: data_fetcher.py  data_fetcher_t2.py  fetch_transcripts.py  seed_ticker.py
test_rel/src/: app.py  mod_b.py
